Update BERT + BIO_Tagging.ipynb

--- a/models/BERT + BIO_Tagging.ipynb
+++ b/models/BERT + BIO_Tagging.ipynb
@@ -9,7 +9,7 @@
     "# I'm loading all the necessary libraries before proceeding to data loading and preprocessing.\n",
     "# ! python -m venv venv\n",
     "# ! source venv/bin/activate\n",
-    "# %pip install pandas transformers torch scikit-learn hf_xet spacy rouge nltk requests seqeval\n",
+    "# %pip install pandas transformers torch scikit-learn hf_xet spacy rouge nltk requests seqeval numpy matplotlib seaborn\n",
     "# ! python -m spacy download en_core_web_sm\n",
     "# OR\n",
     "# %pip install -r ../requirements.txt"
